[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/font_als.otf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/images/card_background.png" type="Texture" id=3]
[ext_resource path="res://assets/images/button.png" type="Texture" id=4]
[ext_resource path="res://card.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 1 )

[node name="texture_card1" type="TextureRect"]
margin_left = 87.0
margin_top = 14.0
margin_right = 1167.0
margin_bottom = 1364.0
rect_scale = Vector2( 0.6, 0.6 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="texture_card_icon" type="TextureRect" parent="."]
margin_left = 285.0
margin_top = 255.0
margin_right = 685.0
margin_bottom = 511.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="text_card_name" type="RichTextLabel" parent="."]
margin_left = 676.667
margin_top = 181.667
margin_right = 923.667
margin_bottom = 302.667
rect_pivot_offset = Vector2( -2633.33, -727 )
custom_colors/default_color = Color( 0.898039, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "101"

[node name="text_card_description" type="RichTextLabel" parent="."]
margin_left = 226.667
margin_top = 750.0
margin_right = 866.667
margin_bottom = 1142.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Card description
Card description
Card description
"

[node name="texture_button" type="TextureButton" parent="."]
margin_left = 70.0
margin_top = 1295.0
margin_right = 1003.0
margin_bottom = 1637.0

[node name="button_card" type="NinePatchRect" parent="texture_button"]
margin_right = 486.0
margin_bottom = 208.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
patch_margin_left = 110
patch_margin_top = 92
patch_margin_right = 71
patch_margin_bottom = 90

[node name="text_button_card1" type="RichTextLabel" parent="."]
margin_left = 258.0
margin_top = 1455.0
margin_right = 908.0
margin_bottom = 1598.0
rect_pivot_offset = Vector2( -2633.33, -727 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
tab_size = 15
text = "Выбрать"

[node name="button_card_ghost" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.00784314 )
margin_left = 83.3333
margin_top = 1365.0
margin_right = 988.333
margin_bottom = 1647.0

[connection signal="pressed" from="button_card_ghost" to="." method="_on_button_card_ghost_pressed"]
